--- a/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/topmenubar.less
+++ b/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/topmenubar.less
@@ -1,18 +1,15 @@
-@import "variables.less";
+
 body {
   min-width: 320px;
   margin-top: 100px;
 }
 
 #tmb_top_menu_bar {
-  .APL_application {
-    @media (max-width: @collapse-breakpoint) {
-      display: none;
-    }
-    .fa {
-      margin-top: 2px;
-    }
+
+  .APL_application .fa {
+    margin-top: 2px;
   }
+
   z-index: 2;
   position: fixed;
   top: 0;
@@ -158,7 +155,7 @@ body {
   }
 
   #tmb_profile .fa.fa-user,
-  #tmb_messaging .fa.fa-envelope-o{
+  #tmb_messaging .fa.fa-envelope-o {
     position: relative;
     a {
       display: block;
@@ -174,18 +171,22 @@ body {
     #tmb_portal_links {
       position: static;
     }
+
     .navbar-nav > li > a {
       padding: 10px 15px;
     }
+
     .TMB_application,
     .INTERSEROH_application {
       &__logocontainer {
         margin-left: 8px;
       }
     }
+
     .navbar-header {
       border-bottom: 1px solid #e7e7e7;
     }
+
     .navbar-right {
       float: none !important;
     }
@@ -211,6 +212,7 @@ body {
     }
   }
 }
+
 @media (min-width: 768px) and (max-width: 820px) {
   #icons_right {
     max-width: 17%;
